# moneybags

./: .env.example  .gitignore  .prettierrc.js  Cargo.toml  package.json  pnpm-lock.yaml
cli/: Cargo.toml
extractors/price/: .gitignore  Cargo.toml
extractors/price/src/: bonding_curve_data.rs  client.rs  constants.rs  main.rs  raydium.rs  termination.rs  tests.rs
extractors/price/src/anchor/: hash.rs
extractors/price/src/cpi/: cpi.rs
extractors/price/src/crawl_status/: channels.rs  errors.rs  inserts.rs  mod.rs  queries.rs  store.rs  table.rs
extractors/price/src/db/: client.rs  db.rs  init.rs  inserts.rs  materialized.rs  mod.rs  queries.rs  tables.rs
extractors/price/src/dragonfly/: client.rs  health.rs  mod.rs
extractors/price/src/instructions/: discriminators.rs  instruction.rs  mod.rs  parse.rs
extractors/price/src/pump_fun/: coins.rs  cpi.rs  discriminators.rs  errors.rs  idl.rs  instructions.rs  mod.rs  signatures.rs  tokens.rs  tokens_threads.rs  trades.rs
extractors/price/src/raydium/: amm.rs  cpi.rs  discriminators.rs  idl.rs  inserts.rs  instructions.rs  mod.rs  store.rs  table.rs  trades.rs
extractors/price/src/rpc/: clients.rs  errors.rs  mod.rs  pool.rs
extractors/price/src/signatures/: config.rs
extractors/price/src/system/: idl.rs  mod.rs  program.rs
extractors/price/src/token/: accounts.rs  idl.rs  inserts.rs  mod.rs  prices.rs  queries.rs  signatures.rs  store.rs  table.rs  transactions.rs
extractors/price/src/trades/: errors.rs  inserts.rs  mod.rs  store.rs  trades.rs  trades_threads.rs
extractors/price/src/transactions/: config.rs  mod.rs  parse.rs  status.rs
extractors/price/src/utils/: blocking.rs  log.rs  mod.rs  pause.rs  rate_limit.rs
models/signal-predictor-transformer/: pyproject.toml
models/signal-predictor-transformer/signal_predictor/: cli.py  device.py  predictor.py  predictor_repl.py  trainer.py  training_data.py  transformer.py
(+76 files in other folders)
